force-app/main/default/objects/FS_Execution_Plan_Contact__c/FS_Execution_Plan_Contact__c.object-meta.xml
<CustomObject>
    <label>Outlet Contact</label>
    <nameField>
        <displayFormat>EC-{0000}</displayFormat>
        <label>Outlet Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlet Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>