force-app/main/default/objects/FS_Execution_Plan_Contact__c/fields/FS_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact_Name__c</fullName>
    <formula>FS_Execution_Plan_Contact__r.FirstName &amp;&quot; &quot;&amp; FS_Execution_Plan_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>