force-app/main/default/objects/FS_Execution_Plan_Contact__c/fields/FS_Contact_s_Account__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact_s_Account__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;FS_Execution_Plan_Contact__r.Account.Id, FS_Execution_Plan_Contact__r.Account.Name)</formula>
    <label>Contactâ€™s Account</label>
    <type>Text</type>
</CustomField>