force-app/main/default/objects/FS_Execution_Plan_Contact__c/fields/FS_Contact_s_Account_RecordType__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact_s_Account_RecordType__c</fullName>
    <formula>FS_Execution_Plan_Contact__r.Account.RecordType.DeveloperName</formula>
    <label>Contactâ€™s Account RecordType</label>
    <type>Text</type>
</CustomField>