force-app/main/default/objects/FS_Execution_Plan_Contact__c/fields/FS_Correct_Data__c.field-meta.xml
<CustomField>
    <fullName>FS_Correct_Data__c</fullName>
    <formula>AND( FS_Execution_Plan_Contact__r.Account.RecordType.DeveloperName=&#39;FS_Headquarters&#39; ,FS_Execution_Plan_Contact__r.Account.Name = Outlet__r.FS_Headquarters__r.Name)</formula>
    <label>Correct Data</label>
    <type>Checkbox</type>
</CustomField>