force-app/main/default/objects/FS_Execution_Plan_Contact__c/fields/FS_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_Email__c</fullName>
    <formula>FS_Execution_Plan_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>