force-app/main/default/objects/FS_Execution_Plan_Contact__c/fields/FS_Execution_Plan_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Contact__c</fullName>
    <label>Headquarter Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 5) OR (2 AND 3 AND 4)</booleanFilter>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.FS_Headquarters__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Outlet, BoE Outlet</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Outlet__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.FS_Headquarters__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.FS_Headquarters__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Headquarters</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outlet Contacts</relationshipLabel>
    <relationshipName>Outlet_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>