force-app/main/default/objects/FS_Execution_Plan_Contact__c/fields/FS_Headquarters__c.field-meta.xml
<CustomField>
    <fullName>FS_Headquarters__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Headquarters</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outlet Contacts (Headquarters)</relationshipLabel>
    <relationshipName>Outlet_Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>