force-app/main/default/objects/FS_Execution_Plan_Contact__c/fields/FS_Outlet_s_HQ__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_s_HQ__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;Outlet__r.FS_Headquarters__r.Id, Outlet__r.FS_Headquarters__r.Name)</formula>
    <label>Outletâ€™s HQ</label>
    <type>Text</type>
</CustomField>