force-app/main/default/objects/FS_Execution_Plan_Contact__c/fields/FS_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Phone__c</fullName>
    <formula>FS_Execution_Plan_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>