force-app/main/default/objects/FS_Execution_Plan_Contact__c/fields/FS_Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Secondary_Phone__c</fullName>
    <formula>FS_Execution_Plan_Contact__r.FS_Alternate_Phone_Cell__c</formula>
    <label>Alternate Phone/Cell</label>
    <type>Text</type>
</CustomField>