force-app/main/default/objects/FS_Execution_Plan_Contact__c/fields/FS_Title__c.field-meta.xml
<CustomField>
    <fullName>FS_Title__c</fullName>
    <formula>TEXT( FS_Execution_Plan_Contact__r.FS_Title__c )</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>