force-app/main/default/objects/FS_Execution_Plan_Contact__c/fields/Outlet__c.field-meta.xml
<CustomField>
    <fullName>Outlet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outlet Contacts</relationshipLabel>
    <relationshipName>Outlet_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>